# LogiGates

./: CMakeLists.txt  README.md  main.cpp
Core/: App.cpp  App.h  Pin.cpp  Pin.h
Core/LogicalElements/: And.cpp  And.h  Base.cpp  Base.h  Equivalent.cpp  Equivalent.h  FiveBitNumberDisplay.cpp  FiveBitNumberDisplay.h  FiveBitNumberEncoder.cpp  FiveBitNumberEncoder.h  Implication.cpp  Implication.h  Lamp.cpp  Lamp.h  LogicalElements.h  Multiplexer.cpp  Multiplexer.h  Not.cpp  Not.h  Or.cpp  Or.h  Splitter.cpp  Splitter.h  Switch.cpp  Switch.h  Xor.cpp  Xor.h
Resources/: imgui.ini
UI/: Fonts.cpp  Fonts.h  Images.cpp  Images.h  Localization.cpp  Localization.h  Renderer.cpp  Renderer.h  UI.h  Window.cpp  Window.h
UI/imgui/: AboutWindow.cpp  AboutWindow.h  Dockspace.cpp  Dockspace.h  Drawable.cpp  Drawable.h  ElementsMenu.cpp  ElementsMenu.h  PreferencesWindow.cpp  PreferencesWindow.h  Welcome.cpp  Welcome.h  Workspace.cpp  Workspace.h
